# spmv-scpa

./: .gitignore  CMakeLists.txt  README.md
include/: csr.h  cuda_csr.h  cuda_hll.h  cuda_timer.cuh  err.h  hll.h  logger.h  mmio.h  utils.h  vector.h
res/: benchmark.csv  matrices.txt
scripts/: download-matrices.py  download-matrices.sh  plots.py  results.py
src/: csr.c  cuda_csr.cu  cuda_hll.cu  cuda_timer.cu  hll.c  logger.c  main.c  mmio.c  utils.c  vector.c
